recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.error
SplitHanoi3:30: error: not enough arguments for method quick_hanoi: (height: Int, src: Int, free: Int, full: Int, dst: Int)Unit.
Unspecified value parameter dst.
  	quick_hanoi(height-1, dst2, src, dst1)
                   ^SplitHanoi3:32: error: not enough arguments for method quick_hanoi: (height: Int, src: Int, free: Int, full: Int, dst: Int)Unit.
Unspecified value parameter dst.
  	quick_hanoi(height-1, other, src, dst2)	
                   ^