recursion.hanoi.lessons.recursion.hanoi.SplitHanoi3.scala.code
def hanoi(height:Int, src:Int, other:Int, dst:Int) {
  if (height >= 1) {
    if (height == 1) 
      move(src, dst)
    else {
      hanoi(height-1, src, dst, other)
      move(src, dst)
      hanoi(height-1, other, src, dst)
    }
  }
}


def quick_hanoi(height:Int, src:Int, free:Int, full:Int, dst:Int) {
  if (height >= 2) 
    move(src, full)
  hanoi(height-1, src, free, dst)
  if (height >= 2) 
    move(full, dst)
  
}



def splitHanoi(height:Int, src:Int, other:Int, dst1:Int, dst2:Int) {
    if (height > 1)
  		splitHanoi(height-1, src, dst1, dst2, other)
  	move(src, dst1)
  	quick_hanoi(height-1, dst2, src, dst1)
  	move(src, dst2)
  	quick_hanoi(height-1, other, src, dst2)	
  
}